--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "push_swap.h": "c",
         "libft.h": "c",
         "get_next_line_bonus.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "mlx.h": "c"
     }
 }
