--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "libft.h": "c",
         "get_next_line_bonus.h": "c",
         "stdio.h": "c",
-        "mlx.h": "c"
+        "mlx.h": "c",
+        "fdf.h": "c",
     }
 }
